--- a/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/components/adding-component/adding-component.component.html
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/components/adding-component/adding-component.component.html
@@ -11,7 +11,7 @@
         </mat-form-field>
       </div>
       <button (click)="saveComponent()" [disabled]="addingForm.invalid" matTooltip="Создать" class="btn-save-component" mat-fab color="accent">
-        <mat-icon class="size-icon">done</mat-icon>
+        <img src="../../../../../../../../assets/img/done.png" alt="">
       </button>
     </div>
     <div class="setting-component__checkboxs">
