--- a/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/components/setting-component/layout/setting-component.component.html
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/components/setting-component/layout/setting-component.component.html
@@ -12,7 +12,7 @@
         </mat-form-field>
       </div>
       <button (click)="upgradePart()" [disabled]="upgradeComponentForm.invalid" matTooltip="Сохранить" class="btn-save-component__update" mat-fab color="accent">
-        <mat-icon class="size-icon">done</mat-icon>
+        <img src="../../../../../../../../../assets/img/done.png" alt="">
       </button>
     </div>
 
@@ -23,7 +23,7 @@
         <p>{{part.equipment_name}}</p>
       </div>
       <div class="border" matTooltip="Редактировать" (click)="openUpgradePart()">
-        <mat-icon class="size-icon">edit</mat-icon>
+        <img src="../../../../../../../../../assets/img/change.png" alt="">
       </div>
     </div>
 
