--- a/CHSZiK/src/app/main/pages/list-of-equipment/components/list-of-equipment-models/list-of-equipment-models.component.html
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/components/list-of-equipment-models/list-of-equipment-models.component.html
@@ -1,5 +1,6 @@
 <div class="item">
-  <button mat-raised-button color="accent" class="menu" matTooltip="Опции" [matMenuTriggerFor]="menu"><mat-icon class="icon-size">list</mat-icon></button>
+  <button mat-raised-button color="accent" class="menu" matTooltip="Опции" [matMenuTriggerFor]="menu"><img src="../../../../../../assets/img/list.png"
+                                                                                                           alt=""></button>
   <mat-menu class="column" #menu="matMenu">
     <button mat-raised-button color="accent" (click)="openSettings()" class="setting">Редактировать</button>
     <button mat-raised-button color="accent" (click)="openPositionModal()" class="setting">Позиции</button>
