--- a/CHSZiK/src/app/main/pages/list-of-location/components/location-page/layout/location-page.component.html
+++ b/CHSZiK/src/app/main/pages/list-of-location/components/location-page/layout/location-page.component.html
@@ -2,7 +2,7 @@
 <div *ngIf="!loadedChild && !loadedParent">
   <div class="wrapper">
     <div class="head">
-      <button mat-raised-button color="accent" class="btn-back" (click)="btnBack()"><mat-icon>arrow_back_ios</mat-icon>Назад</button>
+      <button mat-raised-button color="accent" class="btn-back" (click)="btnBack()"><img src="../../../../../../../assets/img/back.png" alt="">Назад</button>
       <div class="head__header">
         <span class="head__header-name" *ngIf="parentLocation">{{parentLocation.name_location}}</span>
       </div>
