--- a/CHSZiK/src/app/main/pages/list-of-location/components/modal/modal.component.html
+++ b/CHSZiK/src/app/main/pages/list-of-location/components/modal/modal.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="content">
-    <button mat-raised-button color="accent" matTooltip="Закрыть" class="content__button-close"
-            (click)="btnCloseModal()"><mat-icon>close</mat-icon></button>
+    <button mat-raised-button color="warn" matTooltip="Закрыть" class="content__button-close"
+            (click)="btnCloseModal()"><img src="../../../../../../assets/img/close.png" alt=""></button>
     <div class="content__name" [formGroup]="addingNewLocation">
       <mat-form-field class="example-full-width">
         <mat-label>Наименование</mat-label>
