--- a/CHSZiK/src/app/main/pages/warehouse/layout/warehouse.component.html
+++ b/CHSZiK/src/app/main/pages/warehouse/layout/warehouse.component.html
@@ -24,7 +24,8 @@
             <div class="item-quantity__number" matTooltip="Колличество">123</div>
             <div class="item-quantity__measurement" matTooltip="Измерение">Кг</div>
           </div>
-          <mat-icon matTooltip="Удалить" class="item-list__img-delete">delete</mat-icon>
+<!--          <mat-icon matTooltip="Удалить" class="item-list__img-delete">delete</mat-icon>-->
+          <img matTooltip="Удалить" class="item-list__img-delete" src="../../../../../assets/img/delete.png" alt="">
         </div>
 
         <div class="item-list">
