--- a/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/components/adding-component/adding-component.component.scss
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/components/adding-equipment/components/adding-component/adding-component.component.scss
@@ -54,9 +54,8 @@
   justify-content: center;
   align-items: center;
 
-  .size-icon {
-    font-size: 32px;
-    width: auto;
-    height: auto;
+  img {
+    width: 40px;
+    height: 40px;
   }
 }
