--- a/CHSZiK/src/app/main/pages/list-of-equipment/components/list-of-equipment-models/list-of-equipment-models.component.scss
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/components/list-of-equipment-models/list-of-equipment-models.component.scss
@@ -33,11 +33,9 @@
   width: 100px;
   height: 20px;
 
-  .icon-size {
-    width: auto;
-    height: auto;
-    font-size: 30px;
-    margin: 0 auto;
+  img {
+    width: 20px;
+    height: 20px;
   }
 }
 
