--- a/CHSZiK/src/app/main/pages/list-of-equipment/components/modal-position/modal-position.component.scss
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/components/modal-position/modal-position.component.scss
@@ -41,6 +41,11 @@
       height: 30px;
       border-radius: 50px;
 
+      img {
+        width: 25px;
+        height: 25px;
+      }
+
     }
 
     .item-list {
@@ -106,11 +111,9 @@
   margin-left: 5px;
   border-radius: 5px;
 
-  mat-icon {
-    margin: 0 auto;
-    font-size: 24px;
-    width: auto;
-    height: auto;
+  img {
+    width: 20px;
+    height: 20px;
   }
 }
 
