--- a/CHSZiK/src/app/main/pages/list-of-location/components/location-item/location-item.component.scss
+++ b/CHSZiK/src/app/main/pages/list-of-location/components/location-item/location-item.component.scss
@@ -14,12 +14,11 @@
   cursor: pointer;
   width: 35px;
   height: 35px;
-}
 
-.size-icon {
-  font-size: 32px;
-  width: auto;
-  height: auto;
+  img {
+    width: 35px;
+    height: 35px;
+  }
 }
 
 .item-list__item {
@@ -61,6 +60,11 @@
     align-items: center;
     justify-content: center;
     border-radius: 50px;
+
+    img {
+      width: 35px;
+      height: 35px;
+    }
   }
 
   .item-list__item-name {
