--- a/CHSZiK/src/app/main/pages/list-of-location/components/location-page/components/location-page-item/location-page-item.component.scss
+++ b/CHSZiK/src/app/main/pages/list-of-location/components/location-page/components/location-page-item/location-page-item.component.scss
@@ -43,11 +43,9 @@
   width: 100px;
   height: 20px;
 
-  .icon-size {
-    width: auto;
-    height: auto;
-    font-size: 30px;
-    margin: 0 auto;
+  img {
+    width: 20px;
+    height: 20px;
   }
 }
 
