--- a/CHSZiK/src/app/main/pages/list-of-location/components/location-page/layout/location-page.component.scss
+++ b/CHSZiK/src/app/main/pages/list-of-location/components/location-page/layout/location-page.component.scss
@@ -53,6 +53,12 @@
   font-size: 16px;
   border-radius: 5px;
   box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
+
+  img {
+    margin-right: 10px;
+    width: 20px;
+    height: 20px;
+  }
 }
 
 .loading {
