--- a/CHSZiK/src/app/main/pages/list-of-location/components/modal/modal.component.scss
+++ b/CHSZiK/src/app/main/pages/list-of-location/components/modal/modal.component.scss
@@ -32,11 +32,9 @@
       margin-left: 5px;
       border-radius: 5px;
 
-      mat-icon {
-        margin: 0 auto;
-        font-size: 24px;
-        width: auto;
-        height: auto;
+      img {
+        width: 20px;
+        height: 20px;
       }
     }
 
