--- a/CHSZiK/src/app/main/pages/list-of-location/layout/list-of-location.component.scss
+++ b/CHSZiK/src/app/main/pages/list-of-location/layout/list-of-location.component.scss
@@ -30,6 +30,12 @@
   align-items: center;
   font-size: 16px;
   box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
+
+  img {
+    margin-right: 10px;
+    width: 20px;
+    height: 20px;
+  }
 }
 
 .head__btn-adding{
