--- a/CHSZiK/src/app/main/pages/warehouse/components/warehouse-item/layout/warehouse-item.component.scss
+++ b/CHSZiK/src/app/main/pages/warehouse/components/warehouse-item/layout/warehouse-item.component.scss
@@ -24,6 +24,12 @@
       font-size: 16px;
       border-radius: 5px;
       box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
+
+      img {
+        margin-right: 10px;
+        width: 20px;
+        height: 20px;
+      }
     }
 
     .header {
@@ -70,6 +76,11 @@
         cursor: pointer;
         width: 35px;
         height: 35px;
+
+        img {
+          width: 35px;
+          height: 35px;
+        }
       }
 
       .setting__settings-btn-save {
@@ -81,11 +92,9 @@
         height: 30px;
         border-radius: 50px;
 
-        mat-icon {
-          margin: 0 auto;
-          font-size: 24px;
-          width: auto;
-          height: auto;
+        img {
+          width: 25px;
+          height: 25px;
         }
       }
 
