--- a/CHSZiK/src/styles.scss
+++ b/CHSZiK/src/styles.scss
@@ -1,6 +1,8 @@
 * {
   letter-spacing: normal;
 }
+@import 'ngx-owl-carousel-o/lib/styles/scss/owl.carousel';
+@import 'ngx-owl-carousel-o/lib/styles/scss/owl.theme.default';
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
@@ -8,7 +10,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   line-height: normal;
   font-size: 16px;
 }
-
+.ng2-pdf-viewer-container::-webkit-scrollbar {
+  width: 0px;
+  background-color: transparent;
+}
 .mat-typography p {
   margin: 0;
 }
