--- a/CHSZiK/src/app/main/pages/list-of-equipment/components/list-of-equipment-models/list-of-equipment-models.component.scss
+++ b/CHSZiK/src/app/main/pages/list-of-equipment/components/list-of-equipment-models/list-of-equipment-models.component.scss
@@ -9,12 +9,39 @@
   border-radius: 5px;
 }
 
-.image-model-equipment img{
+::-webkit-scrollbar {
+  width: 0px;
+  background-color: transparent;
+}
+
+.image-model-equipment{
   width: 300px;
   height: 300px;
   border-radius: 5px;
   box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
   margin-top: 5px;
+
+  img {
+    border-radius: 5px;
+    width: 100%;
+    height: 100%;
+  }
+
+  .render {
+    overflow: auto;
+    width: 100%;
+    height: 100%;
+  }
+
+  pdf-viewer {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 3px 3px 3px 3px rgba(221, 221, 221, 1);
+    border-radius: 5px;
+  }
 }
 
 .setting {
@@ -66,13 +93,5 @@
   justify-content: center;
 }
 
-pdf-viewer {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  box-shadow: 3px 3px 3px 3px rgba(221, 221, 221, 1);
-  border-radius: 5px;
-}
+
 
