--- a/CHSZiK/src/app/main/pages/list-of-location/components/location-page/components/location-page-item/location-page-item.component.scss
+++ b/CHSZiK/src/app/main/pages/list-of-location/components/location-page/components/location-page-item/location-page-item.component.scss
@@ -8,17 +8,43 @@
   align-items: center;
   justify-content: center;
   width: 320px;
-  //height: 380px;
   background-color: #FFFFFF;
   border-radius: 5px;
 }
 
-.image-model-equipment img{
+::-webkit-scrollbar {
+  width: 0px;
+  background-color: transparent;
+}
+
+.image-model-equipment {
   width: 300px;
   height: 300px;
   border-radius: 5px;
   box-shadow: 0 0 10px 5px rgba(221, 221, 221, 1);
   margin-top: 5px;
+
+  img {
+    border-radius: 5px;
+    width: 100%;
+    height: 100%;
+  }
+
+  .render {
+    overflow: auto;
+    width: 100%;
+    height: 100%;
+  }
+
+  pdf-viewer {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 3px 3px 3px 3px rgba(221, 221, 221, 1);
+    border-radius: 5px;
+  }
 }
 
 .btn {
